v2023-04-21
API update. Added Sharp-As-Night and Azandar Al-Cybiades. Thanks, azzazzellice!

v2023-04-06
Added Jubilee Cake 2023

v2023-03-16
Added Aderine, Fargrave Dregs Dealer. Thanks, bearbelly!

v2023-03-13
API update

v2022-11-25
API update, added Zuqoth. Thanks, Clattuc!

v2022-08-30
API update

v2022-06-06
Added High Isle companions

v2022-04-07
Fixed it so the cake is actually detectable

v2022-04-06
Changed the cake to the 2022 version

v2022-03-29
Added Giladil the Ragpicker

v2022-01-28
Added latest assistants. Thanks, @G103Prince!

v2022-01-09
Added Almalexia's Enchanted Lantern

v2021-12-19
Merged RuffaWuffa's pull request to add 21 mementos. Thanks so much!

v2021-12-16
Added seasonal XP mementos.

v2021-11-27.1
Removed faulty chatspam. Sorry all! Renamed a bunch of key-value pairs
internally to make it easier to add mementos and to read the code.

v2021-11-27
Added an on-login chat reminder to back up your binds in preparation for the
next release. Write them down or take a screenshot. Also, sorry for the
inconvenience, and I do not intend to ever have to do this again for tralce's
Collectible Keybinds. This change comes before I add several new mementos in
the next release.

v2021-11-23
New version numbering scheme. Clarification of text. Added github repo.
Reorganized some code. Added categories.

v1.3.0
2021-11-10
Fixed Campfire Kit. Added Witch's Bonfire Dust. Thanks, Temsol.

v1.2.9
2021-11-10
Added Storm Atronach Transform. Thanks, Mr.Envy! Removed mounts and pets to be
placed in tralce's Vanity Keybinds.

v1.2.8
2021-11-06
Added Relic of the Sentinel. Thanks, @Armicus!

v1.2.7
2021-11-01
Added Void Shard (thanks @grahamscox!) and Ghrasharog, Armory Assistant

v1.2.6
2021-10-10
Added Agonymium Stone and Mostly Stable Juggling Potions. Thanks,
@WitchyWoman42 and @sleepy_worm! Incremented API version.

v1.2.5
2021-08-23
Added Impartial Decision Coin and Illusory Coin. Thanks, @Seric_Bain!

v1.2.4
2021-08-17